Итоговая работа css 1 этап - разметка

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Model S</title>
+    <meta name="viewpoint content="initial-scale=1.0, width=width-device">
+    <title>Tesla</title>
+    <link rel="stylesheet" href="./style.css">
+    <link href="" rel="stylesheet">
   </head>
   <body>
     <header class="header">
       <div class="nav">
-        <img class="nav__label" src="Tesla-Wordmark-Red.png" width="" height="" alt="Tesla">
+        <img class="nav__label" src="Tesla-Wordmark-Red.png" width="166" height="51" alt="Tesla">
         <ul class="nav-list">
           <li class="nav-list__item">Model S</li>
           <li class="nav-list__item">Model X</li>
@@ -24,12 +27,11 @@
           </a>
         </div>
       </div>
-      <h1 class="header__title">Model S</h1>
-      <h2 class="header__subtitle">Добро пожаловать в будущее!</h2>
+      <h1 class="header__title" align="center">Model S</h1>
+      <h2 class="header__subtitle" align="center">Добро пожаловать в будущее!</h2>
     </header>
     <section class="main">
-      <img class="section__label" src="Tesla-Wordmark-Red.png" width="" height="" alt="Tesla">
-      <img class="section__model" src="tesla-png-tesla-png-hd-1636.png" width="" height="" alt="Model S"
+      <img class="section__model" src="Tesla logo + car.png" width="1514" height="594" alt="Model S">
     </section>
     <section class="features">
       <div class="features-range">
@@ -67,7 +69,7 @@
     <section class="order">
       <div class="order-btn">
         <div class="order-btn__rectangle"></div>
-        <div class="order-btn__text">Заказать</div>
+        <div class="order-btn__text">ЗАКАЗАТЬ</div>
       </div>
     </section>
     <section class="vector">
@@ -75,7 +77,7 @@
     </section>
     <section class="model">
       <h3 class="model__title">Model S</h3>
-        <img class="model__interior" src="2013-tesla-model-s-cockpit.png" width="" height="" alt="Interior"
+        <img class="model__interior" src="2013-tesla-model-s-cockpit.png" width="1548" height="844" alt="Interior"
     </section>
     <aside class="information">
       <h4 class="information__title">Будущее вождения</h4>
@@ -141,7 +143,7 @@
         <section class="order">
           <div class="order-btn">
             <div class="order-btn__rectangle"></div>
-            <div class="order-btn__text">Заказать</div>
+            <div class="order-btn__text"><big>ЗАКАЗАТЬ</big></div>
           </div>
           <div class="order-learn">
             <div class="order-learn-icon">
@@ -165,11 +167,11 @@
         </div>
         <div class="safety-rank">
           <h4 class="safety-rank__title">Оценка безопасности</h4>
-            <div class="safety-rank__front">Спереди</div>
-            <div class="safety-rank__side">Сбоку</div>
-            <div class="safety-rank__side-rack">Сбоку (стойка)</div>
-            <div class="safety-rank__driver">Водитель</div>
-            <div class="safety-rank__passanger">Пассажир</div>
+            <div class="safety-rank__front"><big>Спереди</big></div>
+            <div class="safety-rank__side"><big>Сбоку</big></div>
+            <div class="safety-rank__side-rack"><big>Сбоку</big> (стойка)</div>
+            <div class="safety-rank__driver"><big>Водитель</big></div>
+            <div class="safety-rank__passanger"><big>Пассажир</big></div>
             <div class="safety-rank__front-star"></div>
         </div>
         <div class="safety-total">
@@ -186,7 +188,7 @@
     <section class="order">
       <div class="order-btn">
         <div class="order-btn__rectangle"></div>
-        <div class="order-btn__text">Заказать</div>
+        <div class="order-btn__text">ЗАКАЗАТЬ</div>
       </div>
       <div class="order-learn">
         <div class="order-learn-icon">
@@ -198,7 +200,7 @@
     <section class="protection">
       <div class="protection-text">Model S</div>
       <div class="protection-information">
-        <img class="protection-information__car" src="Screenshot_2.png" width="" height="" alt="Tesla crash">
+        <img class="protection-information__car" src="Car frame group.png" width="1049" height="592" alt="Tesla crash">
         <div class="protection-information__crash">
           <div class="protection-information__crash-pointer">
             <div class="protection-information__crash-pointer-ellipse"></div>
@@ -233,21 +235,8 @@
     </section>
     <section class="School">
       <div class="school__text">Разработано в</div>
-      <div class="school__hero">
-        <div class="school__hero-s"></div>
-        <div class="school__hero-c"></div>
-        <div class="school__hero-h"></div>
-        <div class="school__hero-o"></div>
-        <div class="school__hero-o"></div>
-        <div class="school__hero-l"></div>
-        <div class="school__hero-w"></div>
-        <div class="school__hero-e"></div>
-        <div class="school__hero-b"></div>
-        <div class="school__hero-h"></div>
-        <div class="school__hero-e"></div>
-        <div class="school__hero-r"></div>
-        <div class="school__hero-o"></div>
-      </div>
+      <div class="school__hero">WebHero</div>
+      <div class="school__hero scholl__hero_white">School</div>
     </section>
   </body>
 </html>
